- HyperV2012R2+ Added Virtual Hard Disk Drive Quality of Service management for VM - With thanks to Genadij Judin
- some minor fixes for yperV2012R2+ - With thanks to Genadij Judin
- Added CRM 2016 support
- MySQL Added option to set SSL to none as required on newer versions
- VPS2012/VPS2016 Switched CPU count from NumberOfCores to NumberOfLogicalProcessors to supports CPU with HT enabled

Version 1.4.0:
- Added Microsoft SQL 2017 support (Installer & Portal)
- Added MariaDB 10.2 support
- Bugfix hmailserver - With thanks to Centron GmbH
- Powerdns Fix's - With thanks to Centron GmbH
- Fix Importing DNS Zones and speedup importing dns zones - With thanks to Centron GmbH
- Fixs for backup hostingspace - With thanks to Centron GmbH
- Upgraded to letsencrypt-win-simple v1.9.7.2
- Fixed LetsEncrypt 0.0.0.0 bindings issue.
- LetsEncrypt Import certificate fixed.
- LetsEncrypt Success and Failure text fixed.
- LetsEncrypt renew screen fixed on success.
- Added Domain deletion confirmation.
- Fixed IDN Domains (regex / ASCII conversion).
- Fixed SSL Export popup.
- Removed Server Password value from installer log.
- Fixed Scheduled task page design.
- Fixed Whois Client with IDN domains - With thanks to Pds Informatica
- RDS further fix's related to dSHeuristics
- Fixed RDS Session Host removal from collection
- Fixed Scheduled task CheckWebSiteTask for TLS1.2 support
- Fixed Scheduled task layout for CheckWebsiteTask
- Fixed Exchange Mailbox password request action bar & mobile icon displaying when disabled
- Created dSHeuristics.ps1 for users to run and seperate Hosted Organizations OU's
- Fixed Hosted Sharepoint enterprise ID's.
- Fixed HeliconApe htaccess editor.
- Fixed multi idn domain (co.vs for example) regex.
- Fixed 4+ level deep domain names.
- Added Emoji domain support. (with ASCII conversion).
- Replaced Non-Existant text from domain expiration check (Due to multiple domain names which do not provide expiration dates such as .eu, .nl, etc.).

Version 1.3.0: